fixed cards not stacking properly on mobile screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -246,6 +246,7 @@ figcaption {
 
 .cards {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   margin: 0 2rem;
 }
@@ -289,6 +290,46 @@ header ul {
   padding: 0;
   list-style-type: none;
   justify-content: space-around;
+}
+
+.menu-icon {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 1.5rem;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: #711f21;
+  z-index: 2;
+}
+
+.menu-icon line {
+  stroke: #fff;
+  stroke-width: 3px;
+  stroke-linecap: round;
+  transform-origin: center;
+  transition: transform 300ms ease;
+}
+
+.menu-icon line:first-child {
+  transform: translateY(16%);
+}
+
+.menu-icon line:last-child {
+  transform: translateY(-16%);
+}
+
+.close nav {
+  display: block;
+}
+
+.close line:first-child {
+  transform: rotate(135deg);
+}
+
+.close line:last-child {
+  transform: rotate(-135deg);
 }
 
 header nav a {
